@@ -17,11 +17,11 @@ all-local: fuse.o
 install-exec-local: fuse.o
 	$(mkinstalldirs) $(DESTDIR)$(fusemoduledir)
 	$(INSTALL) -m 644 fuse.o $(DESTDIR)$(fusemoduledir)/fuse.o
-	/sbin/depmod -a
+	-/sbin/depmod -a
 
 uninstall-local:
 	rm -f $(DESTDIR)$(fusemoduledir)/fuse.o
-	/sbin/depmod -a
+	-/sbin/depmod -a
 
 clean-local:
 	rm -f *.o *.s
